Implement reverse for two element list