@@ -11,6 +11,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class ReverseTest {
     private static Reverse victim;
+    private List<Integer> list;
+    private List<Integer> expected;
 
     @BeforeAll
     public static void setUp() {
@@ -19,15 +21,23 @@ class ReverseTest {
 
     @Test
     public void testReverse_OneElementList() {
-        List<Integer> list = singletonList(1);
+        list = singletonList(1);
 
         assertEquals(list, victim.reverse(list));
     }
 
     @Test
     public void testReverse_TwoElementList() {
-        List<Integer> list = Arrays.asList(1, 2);
-        List<Integer> expected = List.of(2, 1);
+        list = Arrays.asList(1, 2);
+        expected = List.of(2, 1);
+
+        assertEquals(expected, victim.reverse(list));
+    }
+
+    @Test
+    public void testReverse_ThreeElementList() {
+        list = Arrays.asList(1, 2, 3);
+        expected = List.of(3, 2, 1);
 
         assertEquals(expected, victim.reverse(list));
     }
